Przykład z wykorzystaniem modal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Data Zoom</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
+	<link rel="icon" type="image/png" sizes="32x32" href="bundles/dz/dz/images/favicon.png">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
@@ -39,7 +40,7 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link about" href="#">o Data Zoom</a>
+					<a class="nav-link about" href="#">O Data Zoom</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link competition" href="#">Kompetencje<span class="sr-only">(current)</span></a>
@@ -111,10 +112,63 @@
 <div class="container full-screen">
 
 	<!-- Introduction Row -->
-	<h3 class="my-4">o Data Zoom</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-	<p style="margin-bottom: 30px">&nbsp;</p>
-	<div class="row">
+	<h3 class="my-4">O Data Zoom Management Consulting</h3>
+
+	<p>Data Zoom jest firmą doradczą wspierającą zakłady ubezpieczeń zarówno w kwestiach strategicznych, jak i operacyjnych. Nasze możliwości działania oraz doświadczenie kluczowych osób z naszego zespołu obejmują nie tylko Polskę, ale cały region Europy Środkowo-Wschodniej.</p>
+	<p>W naszym działaniu opieramy się na jak najbliższej współpracy z klientem, łącząc obiektywizm spojrzenia „z zewnątrz” z ciągłą, partnerską interakcją i współtworzeniem rozwiązań.</p>
+	<p>Zakres naszych kompetencji rozciąga się od zagadnień strategicznych, takich, jak wybór drogi rozwoju czy fuzje i przejęcia po wyzwania operacyjne, np. analizę potrzeb rynku, konkurencyjności czy tworzenie nowych produktów. </p>
+	<p>Trzon naszego zespołu stanowią fachowcy o wieloletnim doświadczeniu w pracy na i dla rynków ubezpieczeniowych. Ich drogi zawodowe dały im możliwość teoretycznego i praktycznego poznania wszystkich aspektów funkcjonowania zakładów ubezpieczeń o zróżnicowanej wielkości, celach i możliwościach.</p>
+	<p><br></p>
+	<h3 class="my-4">Nasze wartości</h3>
+
+	<p>Wartości, którym jesteśmy wierni, wytyczają nasze działania, jako firmy. Określają też postępowanie każdego z nas, niezależnie od wyzwań, z jakimi się stykamy.</p>
+
+	<p class="red"><strong>Szacunek</strong></p>
+	<ul>
+		<li>Każdy klient jest jednakowo ważny, każdy problem klienta jest jednakowo ważny, każdemu zleceniu poświęcamy maksymalną uwagę</li>
+		<li>Nie obiecujemy rozwiązań, których nie jesteśmy w stanie zrealizować</li>
+		<li>Na zawsze zachowujemy poufność naszych relacji z klientem</li>
+	</ul>
+	<p class="red"><strong>Porozumienie</strong></p>
+	<ul>
+		<li>Wszystko co robimy, powstaje w porozumieniu z klientem i służy wyłącznie jego celom</li>
+		<li>Podstawą naszej pracy jest dogłębne zrozumienie nie tylko potrzeb, ale także filozofii działania, celów i zasad, jakimi kieruje się klient – nasz partner</li>
+	</ul>
+	<p class="red"><strong>Wartość</strong></p>
+	<ul>
+		<li>Sensem każdego naszego działania jest dostarczanie klientowi wymiernej, trwałej wartości</li>
+		<li>Identyfikujemy potrzeby klienta i dostarczamy rzeczywiste rozwiązania</li>
+	</ul>
+	<p class="red"><strong>Trwałość więzi</strong></p>
+	<ul>
+		<li style="list-style: none">Dla nas nie istnieje pojęcie „były klient”. Więź pozostaje na zawsze - nie ustaje wraz z zrealizowaniem zlecenia</li>
+	</ul>
+
+
+	<p><br></p>
+	<h3 class="my-4">Nasze podejście</h3>
+
+	<p>Nasze podejście oparte jest na czterech głównych wyróżnikach:</p>
+
+	<p class="red"><strong>Rzetelności</strong></p>
+	<ul>
+		<li style="list-style: none">Nasi eksperci przeanalizują wszystkie, nawet pozornie nieistotne elementy mające wpływ na postawione nam zadanie</li>
+	</ul>
+	<p class="red"><strong>Współuczestnictwie</strong></p>
+	<ul>
+		<li style="list-style: none">Od samego początku klient jest naszym partnerem i bierze udział w procesie powstawania rozwiązania</li>
+	</ul>
+	<p class="red"><strong>Otwartość w komunikacji</strong></p>
+	<ul>
+		<li style="list-style: none">Szacunek dla klienta wymaga od nas absolutnej szczerości nawet, jeśli wiemy, że nasza opinia spotka się z jego sprzeciwem</li>
+	</ul>
+	<p class="red"><strong>Ciągłych ulepszeniach</strong></p>
+	<ul>
+		<li style="list-style: none">Stale analizujemy nowe okoliczności i poszukujemy nowych, doskonalszych rozwiązań</li>
+	</ul>
+
+
+	<!--<div class="row">
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
@@ -139,7 +193,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 </div>
 
 
@@ -158,12 +212,11 @@
 				<div class="card-body">
 					<h5>Strategie rozwoju</h5>
 					<ul>
-						<li>Wypracowanie strategii rozwoju  ubezpieczycieli lub wybranych obszarów biznesowych</li>
-						<li>Wzmocnienie obecnych przewag konkurencyjnych oraz identyfikacja przewag do potencjalnego rozwoju</li>
-						<li>Strategie produktowe, <br>w tym wprowadzanie na rynek nowego produktu</li>
-						<li>Strategie cenowe  - dotyczy nowych <br>i istniejących produktów</li>
-						<li>Ekspansja zagraniczna, fuzje i przejęcia (M&A)</li>
-						<li>Skuteczne wdrożenie (operacjonalizacja) strategii</li>
+						<li>Diagnozy przewag konkurencyjnych <br>i strategie ich wzmacniania</li>
+						<li>Wspieranie transformacji strategicznych, zmieniających przyjęte kierunki rozwoju</li>
+						<li>Skuteczne wdrożenia (operacjonalizacje) strategii</li>
+						<li>Wdrożenia innowacyjnych produktów na rynek</li>
+						<li>Rozwój poprzez ekspansję terytorialną oraz w ramach łańcucha wartości</li>
 					</ul>
 				</div>
 			</div>
@@ -171,16 +224,13 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Poprawa efektywności</h5>
+					<h5>Doskonałość operacyjna</h5>
 					<ul>
-						<li>Poprawa wydajności sprzedaży</li>
-						<li>Poprawa doświadczenia klienta</li>
-						<li>Poprawa efektywności operacji <br>(ryzyko, corporate governance, zasoby ludzkie)</li>
-						<li>Poprawa zwinności operacyjnej <br>(agile, lean)</li>
-						<li>Zarządzanie zmianą - reorganizacje <br>i restrukturyzacje</li>
-						<li>Transformacja cyfrowa</li>
-						<li>Włączanie kompetencji zewnętrznych do wspierania rozwoju organizacji</li>
-						<li>Integracja firm po transakcji</li>
+						<li>Poprawa efektywności sprzedaży (doświadczenie klienta, retencja / konwersja, strategia kanałów sprzedaży, systemy motywacyjne)</li>
+						<li>Dobór strategii produktowych <br>i cenowych w segmencie klienta indywidualnego i MŚP</li>
+						<li>Modele zarządzanie segmentem korporacyjnym i reasekuracją</li>
+						<li>Duże transformacje cyfrowe</li>
+						<li>Restrukturyzacje i reorganizacje grup ubezpieczeniowych i poszczególnych obszarów biznesowych</li>
 					</ul>
 				</div>
 			</div>
@@ -188,12 +238,14 @@
 		<div class="col-lg-4 mb-4">
 			<div class="card h-100 box">
 				<div class="card-body">
-					<h5>Wielopoziomowe analizy <br>i business intelligence</h5>
+					<h5>Analityka i innowacje</h5>
 					<ul>
-						<li>Analizy segmentacyjne</li>
-						<li>Prognozowanie wydarzeń w oparciu <br>o duże ilości danych wraz z wyborem optymalnych planów działania</li>
-						<li>Analizy powodów odejść klientów, niskich wskaźników konwersji</li>
+						<li>Optymalizacje procesów decyzyjnych</li>
+						<li>Wykorzystanie sztucznej inteligencji <br>w zarządzaniu działalnością ubezpieczeniową</li>
+						<li>Złożone analizy segmentacyjne</li>
+						<li>Modelowanie probabilistyczne zawężające zakres rozważanych scenariuszy rozwoju</li>
 						<li>Benchmarking strategiczny</li>
+						<li>Innowacje typu plug&play, zarządzanie rozwojem innowacyjności</li>
 					</ul>
 				</div>
 			</div>
@@ -216,21 +268,22 @@
 		</div>
 
 		<div class="card-leaders">
-			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
-				<!--<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt=""></a>
-				<br>-->
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:krzysztof.jarmuszczak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/krzysztof-jarmuszczak.jpg" alt=""></a>
+				<br>
 				<h4>Krzysztof Jarmuszczak
 					<br>
 					<small>Partner Zarządzający</small>
 				</h4>
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
-				<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawniania modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
+
+				<p>Krzysztof wspiera ubezpieczycieli w przeprowadzaniu transformacji strategicznych, doborze strategii rozwoju, usprawnianiu modeli zarządzania organizacją oraz poprawie zwinności operacyjnej.</p>
 				<p>Od blisko 40 lat jest związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie w obszarze zarządzania działalnością ubezpieczeniową (PZU, prezes zarządu), reasekuracyjną (PTR/Polish Re, prezes zarządu) oraz działalnością brokerską (d.Willis, prezes zarządu).
 					<br>W przypadku dwóch ostatnich z wymienionych podmiotów, jest ich założycielem. Jest laureatem Odznaki za Zasługi dla Ubezpieczeń przyznawanej przez Polską Izbę Ubezpieczeń.</p>
-				<p>Krzysztof pełni funkcję Partnera Zarządzającego Data Zoom Management Consulting oraz Prezesa Zarządu.</p>
+				<p>Krzysztof pełni funkcję Partnera Zarządzającego oraz Prezesa Zarządu.</p>
 				<div class="float-right flag">
-					<ul>
+					<!--<ul>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL" title="Polska"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA" title="Litwa"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Latvia.svg/33px-Flag_of_Latvia.svg.png" alt="LV" title="Lotwa"></li>
@@ -248,62 +301,63 @@
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Flag_of_Belarus.svg/33px-Flag_of_Belarus.svg.png" alt="BY" title="Białoruś"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Bulgaria.svg/33px-Flag_of_Bulgaria.svg.png" alt="BG" title="Bułgaria"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Flag_of_the_United_Kingdom.svg/33px-Flag_of_the_United_Kingdom.svg.png" alt="GB" title="Wielka Brytania"></li>
-					</ul>
-					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 600 034 100 <br>
+					</ul>-->
+					<p class="text-right card-contact">Dane kontaktowe: <br> +48 600 034 100 <br>
 						krzysztof.jarmuszczak@datazoom.pl</p>
 				</div>
 			</div>
 		</div>
 
 		<div class="card-leaders">
-			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
-				<!--<a href="mailto:marek.balcerzak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt=""></a>
-				<br>-->
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:marek.balcerzak@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/marek-balcerzak.jpg" alt=""></a>
+				<br>
 				<h4>Marek Balcerzak
 					<br>
 					<small>Partner</small>
 				</h4>
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
-				<p>Marek wspiera klientów w doborze strategii wzrostu, wzmacnianiu przewag konkurencyjnych, strategiach produktowych i cenowych oraz poprawą wydajności procesów sprzedażowych.</p>
-				<p>Marek od ponad 15 lat jest związany związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej, zarządzając rozwojem linii Property & Engineering w Polskim Towarzystwie Reasekuracji, nadzorując rozwój operacji zagranicznych Grupy PZU oraz kierując zespołem Analiz Strategicznych Grupy PZU. Marek jest dwóch współzałożycielem innowacyjnych podmiotów w sektorze ubezpieczeń (Wygodnie.pl i Data Zoom).</p>
-				<p>Marek Balcerzak pełni funkcję Partnera w Dziale Doradztwa Strategicznego Data Zoom Management Consulting.</p>
+				<p>Marek wspiera klientów w doborze strategii rozwoju, strategii produktowych i cenowych, usprawnianiach modeli zrządzania organizacją oraz dużych transformacji strategicznych.</p>
+				<p>Od blisko 20 lat związany z sektorem ubezpieczeń Europy Środkowo-Wschodniej. Posiada doświadczenie wspierania rozwoju organizacji o zróżnicowanej skali działalności (od 0,5% do 45% udziału w rynku), działających w różnych modelach biznesowych, na rynkach o zróżnicowanym poziomie konkurencyjności.</p>
+				<p>Bezpośrednio przed dołączeniem do Data Zoom, Marek odpowiadał za obszar Analiz Strategicznych <br>Grupy PZU.</p>
+				<p>Marek pełni funkcję Partnera w obszarze Doradztwa Strategicznego.</p>
 				<div class="float-right flag">
-					<ul>
+					<!--<ul>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Flag_of_Lithuania.svg/33px-Flag_of_Lithuania.svg.png" alt="UA" title="Litwa"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Flag_of_Latvia.svg/33px-Flag_of_Latvia.svg.png" alt="LV" title="Lotwa"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8f/Flag_of_Estonia.svg/33px-Flag_of_Estonia.svg.png" alt="EE" title="Estonia"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/33px-Flag_of_Ukraine.svg.png" alt="UA" title="Ukraina"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/33px-Flag_of_Hungary.svg.png" alt="HU" title="Rumunia"></li>
-					</ul>
-					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 604 182 893 <br>
+					</ul>-->
+					<p class="text-right card-contact">Dane kontaktowe: <br> +48 604 182 893 <br>
 						marek.balcerzak@datazoom.pl</p>
 				</div>
 			</div>
 		</div>
 
 		<div>
-			<div class="col-lg-4 col-sm-6 <!--text-center--> mb-4 float-left" >
-				<!--<a href="mailto:martur.kruszewski@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt=""></a>
-				<br>-->
+			<div class="col-lg-4 col-sm-6 text-center mb-4 float-left" >
+				<a href="mailto:martur.kruszewski@datazoom.pl"><img class="rounded-circle1 img-fluid d-block mx-auto" src="bundles/dz/dz/images/liderzy/artur-kruszewski.jpg" alt=""></a>
+				<br>
 				<h4>Artur Kruszewski
 					<br>
 					<small>Partner</small>
 				</h4>
 			</div>
 			<div class="col-lg-8 col-sm-8 mb-8 float-left text-justify">
-				<p>Artur wspiera ubezpieczycieli w przeprowadzaniu transformacji technologicznych, zarządzaniu obszarami technologicznymi, zarządzania obszarami technologicznymi, projektowaniu i wdrażaniu rozwiązań usprawniających procesy sprzedaży i obsługi klienta oraz zarządzaniu zmianą.</p>
-				<p>Od ponad 16 lat związany sektorem technologicznych w ubezpieczeniach. Posiada bogate doświadczenie zarządzania projektami transformacyjnymi (Link4, Unilink) oraz doświadczenie tworzenia od podstaw operacji typu Direct w Polsce i Czechach (Link4, Pojistovna).</p>
-				<p>Artur pełni funkcję Partnera w Dziale  Operacyjnym Data Zoom Management Consulting.</p>
+				<p>Artur wspiera ubezpieczycieli w przeprowadzaniu transformacji technologicznych, zarządzaniu obszarami technologicznymi, projektowaniu i wdrażaniu rozwiązań usprawniających procesy sprzedaży i obsługi klienta oraz zarządzaniu zmianą.</p>
+				<p>Od ponad 15 lat związany sektorem technologicznych w ubezpieczeniach. Posiada bogate doświadczenie zarządzania projektami transformacyjnymi (Link4, Unilink) oraz tworzenia od podstaw operacji typu Direct w Polsce i Czechach (Link4, Direct Pojistovna).</p>
+				<p>Artur pełni funkcję Partnera w obszarze Doradztwa Operacyjnego.</p>
 				<div class="float-right flag">
-					<ul>
+					<!--<ul>
 						<li>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/33px-Flag_of_Poland.svg.png" alt="PL"></li>
 						<li class="flag"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Flag_of_the_Czech_Republic.svg/33px-Flag_of_the_Czech_Republic.svg.png" alt="CZK"></li>
-					</ul>
-					<p class="text-right" style="margin-top: 50px">Dane kontaktowe: <br> +48 606 850 877 <br>
+					</ul>-->
+					<p class="text-right card-contact">Dane kontaktowe: <br> +48 606 850 877 <br>
 						artur.kruszewski@datazoom.pl</p>
 
 				</div>
